<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginBottom="20dip" >

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
	        android:id="@+id/view_pc_instructions_textbox_a3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/record_text"
	        android:paddingLeft="10dp"
    		android:layout_marginBottom="5dip" />
    
	    <ImageView
	        android:id="@+id/imageVi_ew23"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/record_vlc"
	        android:contentDescription="@string/record_vlc_alt"/>
	    
</LinearLayout>