<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share_link_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="20dip" >

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_and_copy_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/instructions_textbox_c2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/share_link_text"
    android:layout_marginBottom="5dip" />
        <ImageView
        android:id="@+id/imageView_copylink"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/copy_image_alt_text"
        android:adjustViewBounds="true"
        android:src="@drawable/copy_link" />

</LinearLayout>